# pypulse-v1

./: .gitignore  CMakeLists.txt  requirements.txt  setup.py
cmake/: CMakeLists.txt  Download.cmake  Resources.cmake
resources/windows/: app.exe.manifest  app.rc  resource.h
src/core/: CMakeLists.txt  CefPulseApp.cpp  CefPulseApp.h  CefPulseHandler.cpp  CefPulseHandler.h  CefPulseMain.cpp  CefPulseUtils.cpp  CefPulseUtils.h
src/core/bind/: CMakeLists.txt  CefBindInitialize.cpp
tests/: main.py
